Fixed 'section' CSS style and make HorizontalScroll work properly. Also remove the scrolling of the page via overflow property.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
 {
   padding-top: 50px;
   background-color: black;
+  overflow: hidden;
 }
 
 .starter-template 
@@ -106,15 +107,20 @@
 
 .header
 {
-	background-color: black;
+	/*background-color: black;*/
 	padding-top: 50px;
 	padding-bottom: 0px;
 }
 
-.section-test
-{
-	background-color: #FFF;
+section {
+    float: left;
+    display: block;
+    height: 100%;
+    /*padding: 75px 0 0 0;*/
+    margin: 0;
 }
+
+
 
 /*Setting the position of the Arrows for HorizonScroll*/
 
